[package]
name = "edgeware-service"
version = "0.1.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
log = "0.4"
tokio = "0.1.7"
futures = "0.1"
exit-future = "0.1"
parity-codec = { version = "4.1.1" }
sr-io = { git = "https://github.com/paritytech/substrate" }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate" }
hex-literal = "0.2"
substrate-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-service = { git = "https://github.com/paritytech/substrate" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
aura = { package = "substrate-consensus-aura", git = "https://github.com/paritytech/substrate" }
aura_primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-keystore = { git = "https://github.com/paritytech/substrate" }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/paritytech/substrate" }
structopt = "0.2"
transaction-factory = { git = "https://github.com/paritytech/substrate" }
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate" }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate" }
im-online = { package = "srml-im-online", git = "https://github.com/paritytech/substrate" }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
rand = "0.6"
finality_tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/paritytech/substrate" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
edgeware-executor = { path = "../executor" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.3.2"

[dev-dependencies]
substrate-consensus-common = { git = "https://github.com/paritytech/substrate" }
service-test = { package = "substrate-service-test", git = "https://github.com/paritytech/substrate" }
