[package]
name = "edgeware-testing"
version = "3.2.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
description = "Test utilities for Edgeware."
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { version = "2.0" }
sc-service = { version = "0.8", features = ["test-helpers", "db"] }
sc-client-db = { version = "0.8", features = ["kvdb-rocksdb", "parity-db"] }
sc-client-api = { version = "2.0" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
pallet-contracts = { version = "2.0" }
pallet-grandpa = { version = "2.0" }
pallet-indices = { version = "2.0" }
sp-keyring = { version = "2.0" }
sp-core = { version = "2.0" }
sp-io = { version = "2.0" }
frame-support = { version = "2.0" }
pallet-session = { version = "2.0" }
sp-runtime = { version = "2.0" }
pallet-staking = { version = "2.0" }
sc-executor = { version = "0.8" }
sp-consensus = { version = "0.8" }
frame-system = { version = "2.0" }
substrate-test-client = { version = "2.0" }
pallet-timestamp = { version = "2.0" }
pallet-transaction-payment = { version = "2.0" }
pallet-treasury = { version = "2.0" }
sp-api = { version = "2.0" }
sp-timestamp = { version = "2.0", default-features = false }
sp-block-builder = { version = "2.0" }
sc-block-builder = { version = "0.8" }
sp-inherents = { version = "2.0" }
sp-blockchain = { version = "2.0" }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"

edgeware-executor = { path = "../executor" }
edgeware-primitives = { path = "../primitives" }
edgeware-runtime = { path = "../runtime" }
treasury-reward = { package = "edge-treasury-reward", path = "../../modules/edge-treasury-reward" }

[dev-dependencies]
criterion = "0.3.0"
sc-cli = { version = "0.8" }