[package]
name = "edgeware-transaction-factory"
version = "3.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
sp-block-builder = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sc-block-builder = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sc-cli = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sc-client-api = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sc-client = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-consensus = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
log = "0.4.8"
sp-core = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sp-api = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sp-runtime = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sc-service = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
sp-blockchain = { git = "https://github.com/hicommonwealth/substrate.git", branch = "develop" }
