[package]
name = "edgeware-transaction-factory"
version = "3.0.0"
authors = ["Commonwealth Labs <hello@commonwealth.im>"]
edition = "2018"

[dependencies]
sp-block-builder = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sc-block-builder = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sc-cli = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sc-client-api = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sc-client = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-consensus = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
log = "0.4.8"
sp-core = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sp-api = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sp-runtime = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sc-service = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
sp-blockchain = { git = "https://github.com/hicommonwealth/substrate.git", branch = "drew.node-update" }
